# llvmup

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/llvmup/: Cargo.toml
crates/llvmup/src/: analysis.rs  directories.rs  generation.rs  lib.rs  logging.rs  toolchain.rs  verification.rs
crates/llvmup/src/analysis/: dependencies.rs
crates/llvmup/src/generation/: cargo.rs
crates/llvmup/src/toolchain/: component.rs  context.rs  platform.rs  release.rs  revision.rs  variant.rs
crates/llvmup/src/toolchain/component/: asset.rs  checksum.rs  download.rs  install.rs  manifest.rs
crates/llvmup/src/toolchain/platform/: architecture.rs  system.rs
