[package]
edition = "2021"
name = "llvmup"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/llvmup/llvmup"
description = "Manage multiple LLVM toolchain component installations with ease"

[features]
analysis = ["dep:petgraph", "manifest"]
asm = ["dep:simd-json", "sha2/asm"]
debug = ["syn/extra-traits"]
default = ["asm", "ahash", "mimalloc", "verification"]
generation = ["dep:itertools", "dep:quote", "dep:rust-format", "dep:syn", "dep:toml", "analysis"]
console = ["dep:indicatif", "logging"]
manifest = ["dep:serde_json", "dep:zerovec", "serde"]
logging = ["dep:human-repr"]
serde = ["dep:serde", "camino/serde1"] # "dep:serde_path_to_error"
tracing = ["dep:tracing", "debug"]
verification = ["dep:sha2"]

[dependencies]
ahash = { version = "0.8", optional = true }
async-compression = { version = "0.4", features = ["tokio", "xz"] }
camino = "1.1"
directories = "5.0"
dunce = "1.0"
futures = "0.3"
hex = "0.4"
human-repr = { version = "1.1", optional = true }
indexmap = { version = "2.1", features = ["serde"] }
indicatif = { version = "0.17", optional = true }
itertools = { version = "0.12", optional = true }
mimalloc = { version = "0.1", optional = true }
percent-encoding = "2.3"
petgraph = { version = "0.6", optional = true }
quote = { version = "1.0", optional = true }
reqwest = { version = "0.11", features = ["stream"] }
rust-format = { version = "0.3", features = ["token_stream"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
# serde_path_to_error = { version = "0.1", optional = true }
sha2 = { version = "0.10", optional = true }
simd-json = { version = "0.13", optional = true }
snafu = "0.7"
syn = { version = "2.0", features = ["full"], optional = true }
tokio = { version = "1.34", features = ["fs"] }
tokio-tar = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
toml = { version = "0.8", optional = true }
tracing = { version = "0.1", features = ["attributes", "std"], optional = true }
url = "2.4"
zerovec = { version = "0.10", features = ["derive", "serde"], optional = true }
